--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <link rel="icon" href="src/img/icon.png">
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114691316-1"></script>
+<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114691316-1"></script> -->
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
